# Atomic-IP-Marketplace

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_NOTES.md  LICENSE  README.md  SECURITY.md  TODO.md  main.txt  pr_body.txt
contracts/atomic_swap/: Cargo.toml
contracts/atomic_swap/src/: lib.rs
contracts/atomic_swap/test_snapshots/test/: test_buyer_index_isolation.1.json  test_cancel_swap_allows_after_expiry.1.json  test_cancel_swap_emits_swap_cancelled_event.1.json  test_cancel_swap_rejects_before_expiry.1.json  test_confirm_swap_blocked_when_paused.1.json  test_confirm_swap_emits_swap_confirmed_event.1.json  test_decryption_key_accessible_after_confirmation.1.json  test_dispute_window_boundary_exact_last_ledger.1.json  test_double_cancel_rejected.1.json  test_double_confirm_rejected.1.json  test_duplicate_swap_rejected.1.json  test_fee_deducted_and_sent_to_recipient.1.json  test_get_swaps_by_buyer_multiple.1.json  test_happy_path_initiate_confirm_release_to_seller.1.json  test_initiate_swap_accepts_exact_price.1.json  test_initiate_swap_accepts_overpayment.1.json  test_initiate_swap_allows_any_amount_when_price_is_zero.1.json  test_initiate_swap_blocked_when_paused.1.json  test_initiate_swap_emits_swap_initiated_event.1.json  test_initiate_swap_rejects_amount_that_truncates_fee.1.json  test_initiate_swap_rejects_underpayment.1.json  test_minimum_nonzero_fee_amount_is_allowed.1.json  test_raise_dispute_after_window_expires.1.json  test_raise_dispute_within_window.1.json  test_seller_impersonation_rejected.1.json  (+8 more)
contracts/ip_registry/: Cargo.toml
contracts/ip_registry/src/: lib.rs
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs
(+34 files in other folders)
