[package]
name = "atomic_swap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
ip_registry = { path = "../ip_registry", default-features = false }
zk_verifier = { path = "../zk_verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ip_registry = { path = "../ip_registry" }
zk_verifier = { path = "../zk_verifier" }
