[package]
name = "atomic_swap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
ip_registry = { path = "../ip_registry" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ip_registry = { path = "../ip_registry" }
